--- a/exercicios/ex020/fundo004.html
+++ b/exercicios/ex020/fundo004.html
@@ -7,16 +7,20 @@
     <title>Document</title>
     <style>
         body {
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            background: black url('imagens/wallpaper002.jpg') center top no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,7 +32,7 @@
     <main>
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor et sed ipsam magni voluptatibus aut fugit, non est illum, cum dolorum mollitia suscipit amet quibusdam cumque doloremque culpa optio animi! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo provident enim cumque repellat mollitia facere voluptas quia aut vitae a aliquam quae reiciendis numquam distinctio neque nam, esse magnam recusandae!
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis ipsam esse expedita totam earum, atque, sequi temporibus magnam necessitatibus delectus quos tempore dicta facere voluptates possimus vel enim doloribus unde.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis ipsam esse expedita totam earum, atque, sequi temporibus magnam necessitatibus delectus quos tempore dicta facere voluptates possimus vel enim doloribus unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum nobis sed autem, in eveniet maxime, culpa obcaecati quisquam ducimus dolor omnis, dolorem repellendus assumenda accusantium qui saepe nulla dignissimos? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci perspiciatis numquam vitae ipsa aperiam veritatis nesciunt eius cumque aliquid facere nostrum, voluptas explicabo corporis illum qui fuga saepe. Pariatur, ut! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat natus, maxime ab cumque nesciunt id sunt! Quas optio nihil nam temporibus placeat nemo eveniet reiciendis impedit, velit consequuntur laborum quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quisquam ducimus sit. Doloremque et accusantium quo aut numquam consectetur soluta eaque molestiae hic, repellendus quibusdam dolor ducimus minima sequi dolorum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit cum fugiat corporis? Rem laborum assumenda, porro ex alias eligendi temporibus delectus blanditiis voluptatum provident atque laboriosam eveniet maxime minima doloribus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa veniam dolorum neque, voluptatibus commodi in deserunt velit doloremque! Ut officia reprehenderit maxime, magni natus saepe animi eum dignissimos? Consectetur, possimus!
         </p>
     </main>
 </body>
